--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,10 +1,12 @@
 .preloader{
-    position: fixed;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    background-color: #fff;
-}
+
+/* loading */
+
+display: flex;
+width: 70px;
+height: 14px;
+font-family: 'Inter';
+font-style: normal;
+color: #2E3438;
+
+};
